namespace Api.Application.DataTransfer;

public class QualificationDto
{
    public required string IdCode { get; set; }
    public required string QualificationName { get; set; }
}